[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/rocket.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/room_of_time.gd" type="Script" id=2]

[sub_resource type="Environment" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Spaceship" type="Sprite" parent="."]
position = Vector2( 508.74, 294.908 )
texture = ExtResource( 1 )

[node name="NRG_MONITOR" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "BLA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPD_MONITOR" type="Label" parent="."]
margin_left = -0.374573
margin_top = 11.9865
margin_right = 39.6254
margin_bottom = 25.9865
text = "BLA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MASS_MONITOR" type="Label" parent="."]
margin_left = -0.374573
margin_top = 23.9865
margin_right = 39.6254
margin_bottom = 37.9865
text = "BLA"
__meta__ = {
"_edit_use_anchors_": false
}
